<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_alignParentStart="true"
    android:layout_alignWithParentIfMissing="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/padding_default"
    android:paddingHorizontal="@dimen/padding_default" >

    <TextView
        android:id="@+id/list_item_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/touch_target_minimum"
        android:gravity="center_vertical"
        android:text=""
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:autoSizeTextType="none" />

</LinearLayout>



